<?xml version="1.0"?>
<package format="3">
  <name>navigation_node</name>
  <version>0.1.0</version>
  <description>Rust-based ROS 2 navigation node</description>
  <maintainer email="ayushgoyal8178@gmail.com">ayuugoyal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclrs</exec_depend>
</package>
