<?xml version="1.0"?>
<package format="3">
  <name>two_wheel_robot_description</name>
  <version>0.1.0</version>
  <description>URDF for two-wheel robot</description>
  <maintainer email="ayushgoyal8178@gmail.com">ayuugoyal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
